# PRUEBA-TECNICA-RAPPI

./: .gitignore  CLAUDE.md  INFO TEST.txt  README.md  info.md  pyproject.toml
backend/: pyproject.toml
backend/src/delivery_earnings/: __init__.py  api.py  calculator.py  config.py  demand.py  models.py  weather.py
backend/tests/: test_api.py  test_calculator.py  test_demand.py  test_weather.py
docs/: PLAN.md  SPEC.md
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: DesglosePotencial.jsx  FormularioRepartidor.jsx
src/financial_report/: __init__.py  analysis.py  api_client.py  cli.py  config.py  console.py  currencies.py  history.py  models.py  report.py  service.py  simulator.py
tests/: test_analysis.py  test_api_client.py  test_history.py  test_report.py  test_service.py  test_simulator.py
