[project]
name = "financial-report"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "joacodiler", email = "jdilernia99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
