[project]
name = "delivery-earnings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "joacodiler", email = "jdilernia99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "truststore>=0.10.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
delivery-earnings = "delivery_earnings:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
